# Testing

./: MC_V242_MONTE_CARLO_UPGRADE_HANDOFF.txt  README.md  UPGRADE_NOTES.md  V242_DECISION_FRAGILITY_FORWARD_HANDOFF.txt  pyproject.toml  requirements.txt  streamlit_app_v241_refactored.py
.devcontainer/: devcontainer.json
tests/: conftest.py  test_minimal_suite.py  test_validation_and_reproducibility.py
v241_refactor_app/: __init__.py  analysis_lab.py  analytics.py  app.py  config.py  data_layer.py  decision_engine.py  engine.py  exporters.py  mc_kernel.py  models.py  monte_carlo.py  orchestration.py  scenario_ui.py  state.py  streamlit_compat.py  ui_components.py  utils.py  version.py
